# coreutils-from-scratch

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
coreutils-rs/: Cargo.toml  README.md
coreutils-rs/util/: Cargo.toml
coreutils-rs/util/src/: args.rs  help.rs  lib.rs  meta.rs
src/arch/: arch  arch.c
src/base32/: base32.c
src/base64/: base64  base64.c
src/basenc/: basenc.c  decoders.c  decoders.h  encoders.c  encoders.h
src/cat/: cat  cat.c
src/echo/: echo  echo.c
src/groups/: groups  groups.c
src/hostid/: hostid  hostid.c
src/id/: Makefile  id  id.c
src/kill/: kill  kill.c
src/link/: link  link.c
src/logname/: logname  logname.c
src/ls/: Makefile  args.h  bytetohr.c  bytetohr.h  longformat.c  longformat.h  ls  ls.c  main.c  print_help.c  print_help.h  print_version.c  print_version.h
src/mkdir/: mkdir  mkdir.c
src/mktemp/: mktemp  mktemp.c
src/nproc/: nproc  nproc.c
src/printenv/: printenv  printenv.c
src/pwd/: pwd  pwd.c
src/rm/: rm  rm.c
src/rmdir/: rmdir  rmdir.c
src/sleep/: sleep  sleep.c
src/touch/: touch  touch.c
src/true_false/: false  false.c  true  true.c
src/tty/: tty  tty.c
src/uname/: Makefile  uname  uname.c
src/unlink/: unlink  unlink.c
src/wc/: maxlen_test.fish  random_string  random_string.cpp  test.fish  test.sh  wc  wc.c
src/whoami/: whoami  whoami.c
src/yes/: yes  yes.c
util/src/: error.rs
util/test/: args.rs
